@@ -39,37 +39,6 @@ final class ImmutableSetTemplates {
     }
   }
 
-  /** Prefer {@link ImmutableSet#of()} over more contrived alternatives. */
-  static final class EmptyImmutableSet<T> {
-    @BeforeTemplate
-    ImmutableSet<T> before() {
-      return Refaster.anyOf(
-          ImmutableSet.<T>builder().build(), Stream.<T>empty().collect(toImmutableSet()));
-    }
-
-    @AfterTemplate
-    ImmutableSet<T> after() {
-      return ImmutableSet.of();
-    }
-  }
-
-  /**
-   * Prefer {@link ImmutableSet#of(Object)} over alternatives that don't communicate the
-   * immutability of the resulting set at the type level.
-   */
-  // XXX: Note that this rewrite rule is incorrect for nullable elements.
-  static final class SingletonImmutableSet<T> {
-    @BeforeTemplate
-    Set<T> before(T element) {
-      return Collections.singleton(element);
-    }
-
-    @AfterTemplate
-    ImmutableSet<T> after(T element) {
-      return ImmutableSet.of(element);
-    }
-  }
-
   /** Prefer {@link ImmutableSet#copyOf(Iterable)} and variants over more contrived alternatives. */
   static final class IterableToImmutableSet<T> {
     @BeforeTemplate
@@ -140,18 +109,19 @@ final class ImmutableSetTemplates {
   }
 
   /**
-   * Prefer {@link ImmutableSet#of()} over alternatives that don't communicate the immutability of
-   * the resulting list at the type level.
+   * Prefer {@link ImmutableSet#of()} over more contrived alternatives or alternatives that don't
+   * communicate the immutability of the resulting set at the type level.
    */
+  // XXX: The `Stream` variant may be too contrived to warrant inclusion. Review its usage if/when
+  // this and similar Refaster templates are replaced with an Error Prone check.
   static final class ImmutableSetOf<T> {
     @BeforeTemplate
     Set<T> before() {
-      return Collections.emptySet();
-    }
-
-    @BeforeTemplate
-    Set<T> before2() {
-      return Set.of();
+      return Refaster.anyOf(
+          ImmutableSet.<T>builder().build(),
+          Stream.<T>empty().collect(toImmutableSet()),
+          Collections.emptySet(),
+          Set.of());
     }
 
     @AfterTemplate
@@ -161,13 +131,15 @@ final class ImmutableSetTemplates {
   }
 
   /**
-   * Prefer {@link ImmutableSet#of(Object)} over alternatives that don't communicate the
-   * immutability of the resulting list at the type level.
+   * Prefer {@link ImmutableSet#of(Object)} over more contrived alternatives or alternatives that
+   * don't communicate the immutability of the resulting set at the type level.
    */
+  // XXX: Note that the replacement of `Collections#singleton` is incorrect for nullable elements.
   static final class ImmutableSetOf1<T> {
     @BeforeTemplate
     Set<T> before(T e1) {
-      return Set.of(e1);
+      return Refaster.anyOf(
+          ImmutableSet.<T>builder().add(e1).build(), Collections.singleton(e1), Set.of(e1));
     }
 
     @AfterTemplate
@@ -178,8 +150,10 @@ final class ImmutableSetTemplates {
 
   /**
    * Prefer {@link ImmutableSet#of(Object, Object)} over alternatives that don't communicate the
-   * immutability of the resulting list at the type level.
+   * immutability of the resulting set at the type level.
    */
+  // XXX: Consider writing an Error Prone check which also flags straightforward
+  // `ImmutableSet.builder()` usages.
   static final class ImmutableSetOf2<T> {
     @BeforeTemplate
     Set<T> before(T e1, T e2) {
@@ -194,8 +168,10 @@ final class ImmutableSetTemplates {
 
   /**
    * Prefer {@link ImmutableSet#of(Object, Object, Object)} over alternatives that don't communicate
-   * the immutability of the resulting list at the type level.
+   * the immutability of the resulting set at the type level.
    */
+  // XXX: Consider writing an Error Prone check which also flags straightforward
+  // `ImmutableSet.builder()` usages.
   static final class ImmutableSetOf3<T> {
     @BeforeTemplate
     Set<T> before(T e1, T e2, T e3) {
@@ -210,8 +186,10 @@ final class ImmutableSetTemplates {
 
   /**
    * Prefer {@link ImmutableSet#of(Object, Object, Object, Object)} over alternatives that don't
-   * communicate the immutability of the resulting list at the type level.
+   * communicate the immutability of the resulting set at the type level.
    */
+  // XXX: Consider writing an Error Prone check which also flags straightforward
+  // `ImmutableSet.builder()` usages.
   static final class ImmutableSetOf4<T> {
     @BeforeTemplate
     Set<T> before(T e1, T e2, T e3, T e4) {
@@ -226,8 +204,10 @@ final class ImmutableSetTemplates {
 
   /**
    * Prefer {@link ImmutableSet#of(Object, Object, Object, Object, Object)} over alternatives that
-   * don't communicate the immutability of the resulting list at the type level.
+   * don't communicate the immutability of the resulting set at the type level.
    */
+  // XXX: Consider writing an Error Prone check which also flags straightforward
+  // `ImmutableSet.builder()` usages.
   static final class ImmutableSetOf5<T> {
     @BeforeTemplate
     Set<T> before(T e1, T e2, T e3, T e4, T e5) {
