@@ -23,16 +23,6 @@ final class ImmutableMapTemplatesTest implements RefasterTemplateTestCase {
     return new ImmutableMap.Builder<>();
   }
 
-  ImmutableMap<String, Integer> testEmptyImmutableMap() {
-    return ImmutableMap.<String, Integer>builder().build();
-  }
-
-  ImmutableSet<Map<String, Integer>> testPairToImmutableMap() {
-    return ImmutableSet.of(
-        ImmutableMap.<String, Integer>builder().put("foo", 1).build(),
-        Collections.singletonMap("bar", 2));
-  }
-
   ImmutableSet<ImmutableMap<String, Integer>> testEntryToImmutableMap() {
     return ImmutableSet.of(
         ImmutableMap.<String, Integer>builder().put(Map.entry("foo", 1)).build(),
@@ -87,12 +77,18 @@ final class ImmutableMapTemplatesTest implements RefasterTemplateTestCase {
             k -> Math.toIntExact(ImmutableMap.of("bar", 2L).get(k))));
   }
 
-  ImmutableSet<Map<Object, Object>> testImmutableMapOf() {
-    return ImmutableSet.of(Collections.emptyMap(), Map.of());
+  ImmutableSet<Map<String, String>> testImmutableMapOf() {
+    return ImmutableSet.of(
+        ImmutableMap.<String, String>builder().build(),
+        Collections.<String, String>emptyMap(),
+        Map.<String, String>of());
   }
 
-  Map<String, String> testImmutableMapOf1() {
-    return Map.of("k1", "v1");
+  ImmutableSet<Map<String, String>> testImmutableMapOf1() {
+    return ImmutableSet.of(
+        ImmutableMap.<String, String>builder().put("k1", "v1").build(),
+        Collections.singletonMap("k1", "v1"),
+        Map.of("k1", "v1"));
   }
 
   Map<String, String> testImmutableMapOf2() {
